Replacing fake namedComponents with synthetic in-memory file containing haxe definitions.